# ai-control

./: .dockerignore  .gitignore  DRAG_AND_DROP_FEATURE.md  DRAG_AND_DROP_ИНСТРУКЦИЯ.md  Dockerfile.backend  LICENSE  Makefile  PHASE_2_COMPLETION_REPORT.md  PHASE_3_1_COMPLETION_REPORT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  run_backend.py  run_simple_backend.py  run_tests.py  test_imports.py  ИСПРАВЛЕНИЕ_ОШИБКИ_422_ФАЙЛЫ.md  ИСПРАВЛЕНИЕ_ОШИБКИ_500.md  ИТОГОВОЕ_РЕШЕНИЕ_DRAG_DROP.md  НОВЫЙ_ПОДХОД_СТРАНИЦА_ФАЙЛЫ.md  ОБНОВЛЕНИЕ_DRAG_DROP_HANDLE.md  РЕШЕНИЕ_WEBSOCKET_ПРОБЛЕМЫ.md  РЕШЕНИЕ_ПРОБЛЕМЫ_502.md  РЕШЕНИЕ_ПРОБЛЕМЫ_DRAG_DROP.md  УНИФИКАЦИЯ_СТАТИСТИКИ_DRAG_DROP.md  УПРАВЛЕНИЕ_ВИДИМОСТЬЮ_КАРТОЧЕК.md
aic_docker/: Dockerfile.frontend  docker-compose.dev.yml  docker-compose.prod.yml
aic_docker/monitoring/: prometheus.yml
aic_docker/nginx/: nginx.dev.conf  nginx.prod.conf
alembic/: env.py
alembic/versions/: 2025_01_27_0000-add_team_management_models.py  (+12 more)
backend/: main.py
core/: __init__.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.prod.yml  env.example
front/: package-lock.json  package.json
front-ai-control/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/: package.json
settings/: dev-local.env  dev.env
ssl/: pubkey.pem
tests/: conftest.py  test_api_endpoints.py  test_basic_functionality.py  test_calendar_system_simple.py  test_calendar_system_structure.py  test_code_execution_service.py  test_communication_system_functional.py  test_communication_system_simple.py  test_communication_system_structure.py  test_dashboards.py  test_data_processing.py  test_data_processing_simple.py  test_documents_simple.py  test_documents_structure.py  test_integration.py  test_kpi.py  test_kpi_models.py  test_kpi_simple.py  test_kpi_standalone.py  test_kpi_structure.py  test_middleware_and_permissions.py  test_permissions_api.py  test_personal_dashboard_functional.py  test_personal_dashboard_simple.py  test_personal_dashboard_structure.py  test_rabbitmq_consumer.py  test_reports_simple.py  test_reports_structure.py  test_search_system_simple.py  test_search_system_structure.py  test_simple_auth.py  test_tasks_simple.py  test_tasks_structure.py  test_user_management.py  test_user_registration.py  test_websocket.py
(+324 files in other folders)
